# winter

./: .gitignore  Cargo.toml  README.md
src/: feed.rs  lib.rs  main.rs  main_app.rs  syndication.rs
src/document/: media.rs  mod.rs
src/fetch/: mod.rs
src/gui_config/: catppuccin.rs  mod.rs
src/state/: inotify.rs  mod.rs
src/test-data/: youtube.html
