[package]
name = "wrss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
eframe = "0.23.0"
html2md = "0.2.14"
inotify = "0.10.2"
lazy_static = "1.4.0"
regex = "1.9.6"
rss = "2.0.6"
serde = { version = "1.0.188", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.32.0", features = ["full"] }
youtube_dl = "0.9.0"
