[package]
name = "winter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-document-tree"
path = "src/bin/test-document-tree.rs"
required-features = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
eframe = {version = "0.23.0", optional = true}
html_parser = "0.7.0"
http-cache-reqwest = "0.11.3"
inotify = "0.10.2"
lazy_static = "1.4.0"
open = "5.0.0"
regex = "1.9.6"
reqwest = "0.11.22"
reqwest-middleware = "0.2.3"
rss = "2.0.6"
serde = { version = "1.0.188", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.32.0", features = ["full"] }
youtube_dl = "0.9.0"
tempdir = "0.3.7"
thiserror = "1.0.49"
async-recursion = "1.0.5"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
image = { version = "0.24.7", features = ["default"] }

[features]
default = ["gui"]
gui = ["eframe"]

