[package]
name = "winter"
version = "0.1.0"
edition = "2021"
default-run = "winter"

[[bin]]
name = "winter-test-document-tree"
path = "src/bin/test-document-tree.rs"
required-features = ["gui"]

[[bin]]
name = "winter"
path = "src/main.rs"
required-features = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
eframe = {version = "0.23.0", optional = true}
html_parser = "0.7.0"
http-cache-reqwest = "0.11.3"
inotify = "0.10.2"
lazy_static = "1.4.0"
open = { version = "5.0.0", optional = true }
regex = "1.9.6"
reqwest = "0.11.22"
reqwest-middleware = "0.2.3"
serde = { version = "1.0.188", features = ["derive"]}
tokio = { version = "1.32.0", features = ["full"] }
tempdir = "0.3.7"
thiserror = "1.0.49"
# async-recursion = "1.0.5"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
image = { version = "0.24.7", features = ["default"] }
rfd = { version = "0.12.0", features = ["xdg-portal"], default-features = false, optional = true }
clap = { version = "4.4.6", features = ["derive"], optional = true }
figment = { version = "0.10.11", features = ["env", "toml"], optional = true }
serde-xml-rs = "0.6.0"
xdg = { version = "2.5.2", optional = true }
# syndication = "0.5.0"
atom_syndication = "0.12.2"
rss = {version = "2.0.6"}
chrono = "0.4.31"

[features]
default = ["gui"]
gui = ["eframe", "rfd", "clap", "figment", "open", "xdg"]

[profile.release]
lto = "thin"
opt-level = 3